Fix StackOverflow for gist (#504)